--- a/KidKinder/Views/LayoutPartial/AdminLayoutPartial/_HeadPartial.cshtml
+++ b/KidKinder/Views/LayoutPartial/AdminLayoutPartial/_HeadPartial.cshtml
@@ -7,28 +7,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <!-- site metas -->
-    <title>Pluto - Responsive Bootstrap Admin Panel Templates</title>
+    <title>KidKinder Anaokulu</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
     <!-- site icon -->
-    <link rel="icon" href="images/fevicon.png" type="image/png" />
+    <link rel="icon" href="~/pluto-1.0.0/images/fevicon.png" type="image/png" />
     <!-- bootstrap css -->
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/pluto-1.0.0/css/bootstrap.min.css" />
     <!-- site css -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="~/pluto-1.0.0/style.css" />
     <!-- responsive css -->
-    <link rel="stylesheet" href="css/responsive.css" />
+    <link rel="stylesheet" href="~/pluto-1.0.0/css/responsive.css" />
     <!-- color css -->
-    <link rel="stylesheet" href="css/colors.css" />
+    <link rel="stylesheet" href="~/pluto-1.0.0/css/colors.css" />
     <!-- select bootstrap -->
-    <link rel="stylesheet" href="css/bootstrap-select.css" />
+    <link rel="stylesheet" href="~/pluto-1.0.0/css/bootstrap-select.css" />
     <!-- scrollbar css -->
-    <link rel="stylesheet" href="css/perfect-scrollbar.css" />
+    <link rel="stylesheet" href="~/pluto-1.0.0/css/perfect-scrollbar.css" />
     <!-- custom css -->
-    <link rel="stylesheet" href="css/custom.css" />
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" href="~/pluto-1.0.0/css/custom.css" />
 </head>
