--- a/KidKinder/Views/LayoutPartial/AdminLayoutPartial/_ScriptPartial.cshtml
+++ b/KidKinder/Views/LayoutPartial/AdminLayoutPartial/_ScriptPartial.cshtml
@@ -1,24 +1,24 @@
 ﻿
 
-<script src="js/jquery.min.js"></script>
-<script src="js/popper.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
+<script src="~/pluto-1.0.0/js/jquery.min.js"></script>
+<script src="~/pluto-1.0.0/js/popper.min.js"></script>
+<script src="~/pluto-1.0.0/js/bootstrap.min.js"></script>
 <!-- wow animation -->
-<script src="js/animate.js"></script>
+<script src="~/pluto-1.0.0/js/animate.js"></script>
 <!-- select country -->
-<script src="js/bootstrap-select.js"></script>
+<script src="~/pluto-1.0.0/js/bootstrap-select.js"></script>
 <!-- owl carousel -->
-<script src="js/owl.carousel.js"></script>
+<script src="~/pluto-1.0.0/js/owl.carousel.js"></script>
 <!-- chart js -->
-<script src="js/Chart.min.js"></script>
-<script src="js/Chart.bundle.min.js"></script>
-<script src="js/utils.js"></script>
-<script src="js/analyser.js"></script>
+<script src="~/pluto-1.0.0/js/Chart.min.js"></script>
+<script src="~/pluto-1.0.0/js/Chart.bundle.min.js"></script>
+<script src="~/pluto-1.0.0/js/utils.js"></script>
+<script src="~/pluto-1.0.0/js/analyser.js"></script>
 <!-- nice scrollbar -->
-<script src="js/perfect-scrollbar.min.js"></script>
+<script src="~/pluto-1.0.0/js/perfect-scrollbar.min.js"></script>
 <script>
     var ps = new PerfectScrollbar('#sidebar');
 </script>
 <!-- custom js -->
-<script src="js/custom.js"></script>
-<script src="js/chart_custom_style1.js"></script>
+<script src="~/pluto-1.0.0/js/custom.js"></script>
+<script src="~/pluto-1.0.0/js/chart_custom_style1.js"></script>
