--- a/KidKinder/Views/LayoutPartial/AdminLayoutPartial/_TopbarPartial.cshtml
+++ b/KidKinder/Views/LayoutPartial/AdminLayoutPartial/_TopbarPartial.cshtml
@@ -5,7 +5,7 @@
         <div class="full">
             <button type="button" id="sidebarCollapse" class="sidebar_toggle"><i class="fa fa-bars"></i></button>
             <div class="logo_section">
-                <a href="index.html"><img class="img-responsive" src="images/logo/logo.png" alt="#" /></a>
+                <a href="index.html"><img class="img-responsive" src="~/pluto-1.0.0/images/logo/logo.png" alt="#" /></a>
             </div>
             <div class="right_topbar">
                 <div class="icon_info">
@@ -16,12 +16,10 @@
                     </ul>
                     <ul class="user_profile_dd">
                         <li>
-                            <a class="dropdown-toggle" data-toggle="dropdown"><img class="img-responsive rounded-circle" src="images/layout_img/user_img.jpg" alt="#" /><span class="name_user">John David</span></a>
+                            <a class="dropdown-toggle" data-toggle="dropdown"><img class="img-responsive rounded-circle" src="~/pluto-1.0.0/images/layout_img/user_img.jpg" alt="#" /><span class="name_user">Admin</span></a>
                             <div class="dropdown-menu">
-                                <a class="dropdown-item" href="profile.html">My Profile</a>
-                                <a class="dropdown-item" href="settings.html">Settings</a>
-                                <a class="dropdown-item" href="help.html">Help</a>
-                                <a class="dropdown-item" href="#"><span>Log Out</span> <i class="fa fa-sign-out"></i></a>
+                                <a class="dropdown-item" href="profile.html">Ayarlar</a>
+                                <a class="dropdown-item" href="#"><span>Çıkış</span> <i class="fa fa-sign-out"></i></a>
                             </div>
                         </li>
                     </ul>
