--- a/KidKinder/Views/Default/Index.cshtml
+++ b/KidKinder/Views/Default/Index.cshtml
@@ -15,3 +15,62 @@
 @await Component.InvokeAsync("_TestimonailPartial")
 
 @await Component.InvokeAsync("_SubAboutPartial")
+
+<div class="container-fluid bg-secondary text-white mt-5 py-5 px-sm-3 px-md-5">
+    <div class="row pt-5">
+
+        @await Component.InvokeAsync("_SocialPartial")
+
+        @await Component.InvokeAsync("_ContactPartial")
+
+        <div class="col-lg-3 col-md-6 mb-5">
+            <h3 class="text-primary mb-4">Quick Links</h3>
+            <div class="d-flex flex-column justify-content-start">
+                <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Home</a>
+                <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>About Us</a>
+                <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Our Classes</a>
+                <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Our Teachers</a>
+                <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Our Blog</a>
+                <a class="text-white" href="#"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
+            </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 mb-5">
+            <h3 class="text-primary mb-4">Newsletter</h3>
+            <form action="">
+                <div class="form-group">
+                    <input type="text"
+                           class="form-control border-0 py-4"
+                           placeholder="Your Name"
+                           required="required" />
+                </div>
+                <div class="form-group">
+                    <input type="email"
+                           class="form-control border-0 py-4"
+                           placeholder="Your Email"
+                           required="required" />
+                </div>
+                <div>
+                    <button class="btn btn-primary btn-block border-0 py-3"
+                            type="submit">
+                        Submit Now
+                    </button>
+                </div>
+            </form>
+        </div>
+
+    </div>
+    <div class="container-fluid pt-5"
+         style="border-top: 1px solid rgba(23, 162, 184, 0.2) ;">
+        <p class="m-0 text-center text-white">
+            &copy;
+            <a class="text-primary font-weight-bold" href="#">KidKinder </a>.
+            Tüm hakları saklıdır.
+
+            Designed by
+            <a class="text-primary font-weight-bold" href="https://htmlcodex.com">Kadir GÜVEN</a>
+            <br />Distributed By:
+            <a href="#" target="_blank">Murat YÜCEDAĞ</a>
+        </p>
+    </div>
+</div>
