All partial Views revised

--- a/KidKinder/Views/LayoutPartial/UILayoutPartial/_UINavbarPartial.cshtml
+++ b/KidKinder/Views/LayoutPartial/UILayoutPartial/_UINavbarPartial.cshtml
@@ -17,22 +17,13 @@
              id="navbarCollapse">
             <div class="navbar-nav font-weight-bold mx-auto py-0">
                 <a href="index.html" class="nav-item nav-link active">Home</a>
-                <a href="about.html" class="nav-item nav-link">About</a>
-                <a href="class.html" class="nav-item nav-link">Classes</a>
-                <a href="team.html" class="nav-item nav-link">Teachers</a>
-                <a href="gallery.html" class="nav-item nav-link">Gallery</a>
-                <div class="nav-item dropdown">
-                    <a href="#"
-                       class="nav-link dropdown-toggle"
-                       data-toggle="dropdown">Pages</a>
-                    <div class="dropdown-menu rounded-0 m-0">
-                        <a href="blog.html" class="dropdown-item">Blog Grid</a>
-                        <a href="single.html" class="dropdown-item">Blog Detail</a>
-                    </div>
-                </div>
-                <a href="contact.html" class="nav-item nav-link">Contact</a>
+                <a href="about.html" class="nav-item nav-link">Hakkımızda</a>
+                <a href="class.html" class="nav-item nav-link">Sınıflar</a>
+                <a href="team.html" class="nav-item nav-link">Öğretmenler</a>
+                <a href="gallery.html" class="nav-item nav-link">Galeri</a>
+                <a href="contact.html" class="nav-item nav-link">İletişim</a>
             </div>
-            <a href="" class="btn btn-primary px-4">Join Class</a>
+            <a href="" class="btn btn-primary px-4">Hemen Kayıt Yaptır..</a>
         </div>
     </nav>
 </div>
