--- a/KidKinder/Views/Shared/Components/_AboutPartial/Default.cshtml
+++ b/KidKinder/Views/Shared/Components/_AboutPartial/Default.cshtml
@@ -3,20 +3,17 @@
     <div class="container">
         <div class="row align-items-center">
             <div class="col-lg-5">
-                <img class="img-fluid rounded mb-5 mb-lg-0"
+                <img class="img-fluid rounded mb-5 mb-lg-0" 
                      src="~/kidkinder-1.0.0/img/about-1.jpg"
                      alt="" />
             </div>
             <div class="col-lg-7">
                 <p class="section-title pr-5">
-                    <span class="pr-2">Learn About Us</span>
+                    <span class="pr-2">Hakkımızda</span>
                 </p>
-                <h1 class="mb-4">Best School For Your Kids</h1>
+                <h1 class="mb-4">Çocuklarınız için en iyi eğitim..</h1>
                 <p>
-                    Invidunt lorem justo sanctus clita. Erat lorem labore ea, justo
-                    dolor lorem ipsum ut sed eos, ipsum et dolor kasd sit ea justo.
-                    Erat justo sed sed diam. Ea et erat ut sed diam sea ipsum est
-                    dolor
+                    Biz, çocukların keşfetmeye, öğrenmeye ve büyümeye yönelik meraklarını ve potansiyellerini desteklemeyi amaçlayan bir çocuk anaokulu projesiyiz. Öğrencilerimizin bireysel ihtiyaçlarını anlayarak, eğitimlerini keyifli ve etkili bir şekilde yönlendiriyoruz. Deneyimli eğitimcilerimiz, çocukların özgüvenlerini geliştirmek ve sosyal becerilerini artırmak için çeşitli öğrenme yöntemleri ve etkinlikler kullanıyorlar. Modern ve güvenli bir öğrenme ortamında, çocuklarımızın öğrenmeye olan tutkularını canlandırmak ve onları gelecekteki başarılarına hazırlamak için elimizden gelenin en iyisini yapıyoruz.
                 </p>
                 <div class="row pt-2 pb-4">
                     <div class="col-6 col-md-4">
@@ -25,21 +22,18 @@
                     <div class="col-6 col-md-8">
                         <ul class="list-inline m-0">
                             <li class="py-2 border-top border-bottom">
-                                <i class="fa fa-check text-primary mr-3"></i>Labore eos amet
-                                dolor amet diam
+                                <i class="fa fa-check text-primary mr-3"></i>STEM sınıfları ile teknolojiye daha yakın
                             </li>
                             <li class="py-2 border-bottom">
-                                <i class="fa fa-check text-primary mr-3"></i>Etsea et sit
-                                dolor amet ipsum
+                                <i class="fa fa-check text-primary mr-3"></i>Geleneksel eğitim anlayışına yakın 
                             </li>
                             <li class="py-2 border-bottom">
-                                <i class="fa fa-check text-primary mr-3"></i>Diam dolor diam
-                                elitripsum vero.
+                                <i class="fa fa-check text-primary mr-3"></i>Robotik kodlama ile geleceği şekillendiren
                             </li>
                         </ul>
                     </div>
                 </div>
-                <a href="" class="btn btn-primary mt-2 py-2 px-4">Learn More</a>
+                <a href="" class="btn btn-primary mt-2 py-2 px-4">Daha fazla bilgi için..</a>
             </div>
         </div>
     </div>
