--- a/KidKinder/Views/Shared/Components/_ClassesPartial/Default.cshtml
+++ b/KidKinder/Views/Shared/Components/_ClassesPartial/Default.cshtml
@@ -3,9 +3,9 @@
     <div class="container">
         <div class="text-center pb-2">
             <p class="section-title px-5">
-                <span class="px-2">Popular Classes</span>
+                <span class="px-2">Popüler Sınıflar</span>
             </p>
-            <h1 class="mb-4">Classes for Your Kids</h1>
+            <h1 class="mb-4">Çocuklarınız için Sınıflar</h1>
         </div>
         <div class="row">
             <div class="col-lg-4 mb-5">
