--- a/KidKinder/Views/Shared/Components/_ContactPartial/Default.cshtml
+++ b/KidKinder/Views/Shared/Components/_ContactPartial/Default.cshtml
@@ -2,26 +2,26 @@
 
 
 <div class="col-lg-3 col-md-6 mb-5">
-    <h3 class="text-primary mb-4">Get In Touch</h3>
+    <h3 class="text-primary mb-4">İletişime Geçin..</h3>
     <div class="d-flex">
         <h4 class="fa fa-map-marker-alt text-primary"></h4>
         <div class="pl-3">
-            <h5 class="text-white">Address</h5>
-            <p>123 Street, New York, USA</p>
+            <h5 class="text-white">Adres</h5>
+            <p>Özlüce Mahallesi 50.Yıl Sokak No:1 Nilüfer / BURSA</p>
         </div>
     </div>
     <div class="d-flex">
         <h4 class="fa fa-envelope text-primary"></h4>
         <div class="pl-3">
-            <h5 class="text-white">Email</h5>
-            <p>info@example.com</p>
+            <h5 class="text-white">Mail Adresi</h5>
+            <p>kidkinder@KidKinder.com</p>
         </div>
     </div>
     <div class="d-flex">
         <h4 class="fa fa-phone-alt text-primary"></h4>
         <div class="pl-3">
-            <h5 class="text-white">Phone</h5>
-            <p>+012 345 67890</p>
+            <h5 class="text-white">Telefon</h5>
+            <p>0224 325 68 98</p>
         </div>
     </div>
 </div>
