--- a/KidKinder/Views/Shared/Components/_FacilitiyPartial/Default.cshtml
+++ b/KidKinder/Views/Shared/Components/_FacilitiyPartial/Default.cshtml
@@ -7,10 +7,9 @@
                      style="padding: 30px">
                     <i class="flaticon-050-fence h1 font-weight-normal text-primary mb-3"></i>
                     <div class="pl-4">
-                        <h4>Play Ground</h4>
+                        <h4>Oyun Alanları</h4>
                         <p class="m-0">
-                            Kasd labore kasd et dolor est rebum dolor ut, clita dolor vero
-                            lorem amet elitr vero...
+                            Çocuklarımız için özel olarak tasarlanmış oyun alanlarımızda sosyal becerilerini geliştirmelerini teşvik ediyoruz. 
                         </p>
                     </div>
                 </div>
@@ -20,10 +19,9 @@
                      style="padding: 30px">
                     <i class="flaticon-022-drum h1 font-weight-normal text-primary mb-3"></i>
                     <div class="pl-4">
-                        <h4>Music and Dance</h4>
+                        <h4>Müzik ve Dans</h4>
                         <p class="m-0">
-                            Kasd labore kasd et dolor est rebum dolor ut, clita dolor vero
-                            lorem amet elitr vero...
+                            Müzik ve dans aktivitelerimiz, çocukların yaratıcılıklarını ve özgüvenlerini artırmalarını sağlar.
                         </p>
                     </div>
                 </div>
@@ -33,10 +31,9 @@
                      style="padding: 30px">
                     <i class="flaticon-030-crayons h1 font-weight-normal text-primary mb-3"></i>
                     <div class="pl-4">
-                        <h4>Arts and Crafts</h4>
+                        <h4>Sanat ve El Sanatları</h4>
                         <p class="m-0">
-                            Kasd labore kasd et dolor est rebum dolor ut, clita dolor vero
-                            lorem amet elitr vero...
+                            Sanat ve el sanatları derslerimizde çocuklar, hayal güçlerini kullanarak eserler yaratırken keyifli vakit geçirirler. 
                         </p>
                     </div>
                 </div>
@@ -46,10 +43,9 @@
                      style="padding: 30px">
                     <i class="flaticon-017-toy-car h1 font-weight-normal text-primary mb-3"></i>
                     <div class="pl-4">
-                        <h4>Safe Transportation</h4>
+                        <h4>Güvenli Ulaşım</h4>
                         <p class="m-0">
-                            Kasd labore kasd et dolor est rebum dolor ut, clita dolor vero
-                            lorem amet elitr vero...
+                            Çocuklarımızın güvenliği her şeyden önce gelir. Ulaşımı için elimizden geleni yapıyoruz.
                         </p>
                     </div>
                 </div>
@@ -59,10 +55,9 @@
                      style="padding: 30px">
                     <i class="flaticon-025-sandwich h1 font-weight-normal text-primary mb-3"></i>
                     <div class="pl-4">
-                        <h4>Healthy food</h4>
+                        <h4>Sağlıklı Beslenme</h4>
                         <p class="m-0">
-                            Kasd labore kasd et dolor est rebum dolor ut, clita dolor vero
-                            lorem amet elitr vero...
+                            Sağlıklı beslenme alışkanlıkları çocukların büyüme ve gelişmeleri için çok önemlidir. 
                         </p>
                     </div>
                 </div>
@@ -72,10 +67,9 @@
                      style="padding: 30px">
                     <i class="flaticon-047-backpack h1 font-weight-normal text-primary mb-3"></i>
                     <div class="pl-4">
-                        <h4>Educational Tour</h4>
+                        <h4>Eğitim Gezileri</h4>
                         <p class="m-0">
-                            Kasd labore kasd et dolor est rebum dolor ut, clita dolor vero
-                            lorem amet elitr vero...
+                            Eğitim gezilerimiz, çocukların öğrenme deneyimlerini gerçek dünya uygulamalarını sağlar. 
                         </p>
                     </div>
                 </div>
