--- a/KidKinder/Views/Shared/Components/_FeaturePartial/Default.cshtml
+++ b/KidKinder/Views/Shared/Components/_FeaturePartial/Default.cshtml
@@ -3,7 +3,7 @@
 <div class="container-fluid bg-primary px-0 px-md-5 mb-5">
     <div class="row align-items-center px-3">
         <div class="col-lg-6 text-center text-lg-left">
-            <h4 class="text-white mb-4 mt-5 mt-lg-0">Kids Learning Center</h4>
+            <h4 class="text-white mb-4 mt-5 mt-lg-0">Eğlenceli Eğitim Merkezi</h4>
             <h1 class="display-3 font-weight-bold text-white">
                 Ana Okulunda yeni teknolojik devrim..
             </h1>
