--- a/KidKinder/Views/Shared/Components/_QuickPartial/Default.cshtml
+++ b/KidKinder/Views/Shared/Components/_QuickPartial/Default.cshtml
@@ -1,12 +1,12 @@
 ﻿
 <div class="col-lg-3 col-md-6 mb-5">
-    <h3 class="text-primary mb-4">Quick Links</h3>
+    <h3 class="text-primary mb-4">Faydalı Linkler</h3>
     <div class="d-flex flex-column justify-content-start">
-        <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Home</a>
-        <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>About Us</a>
-        <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Our Classes</a>
-        <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Our Teachers</a>
-        <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Our Blog</a>
-        <a class="text-white" href="#"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
+        <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Okul Servisleri</a>
+        <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Kırtasiye Hizmeti</a>
+        <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Okul Giyim</a>
+        <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Öğretmenlerimiz</a>
+        <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Faydalı Bilgiler</a>
+        <a class="text-white" href="#"><i class="fa fa-angle-right mr-2"></i>Okul Aile Birliği</a>
     </div>
 </div>
