--- a/KidKinder/Views/Shared/Components/_RegisterPartial/Default.cshtml
+++ b/KidKinder/Views/Shared/Components/_RegisterPartial/Default.cshtml
@@ -4,27 +4,21 @@
         <div class="row align-items-center">
             <div class="col-lg-7 mb-5 mb-lg-0">
                 <p class="section-title pr-5">
-                    <span class="pr-2">Book A Seat</span>
+                    <span class="pr-2">Kayıt Yaptırın..</span>
                 </p>
-                <h1 class="mb-4">Book A Seat For Your Kid</h1>
+                <h1 class="mb-4">Çocuğunuz için kaydını yapalım..</h1>
                 <p>
-                    Invidunt lorem justo sanctus clita. Erat lorem labore ea, justo
-                    dolor lorem ipsum ut sed eos, ipsum et dolor kasd sit ea justo.
-                    Erat justo sed sed diam. Ea et erat ut sed diam sea ipsum est
-                    dolor
+                    Çocuğunuz için bir yer ayırtın! Biz, çocuklarınızın her birinin bireysel yeteneklerini keşfetmelerini ve geliştirmelerini destekleyen bir ortam sunuyoruz. Nitelikli eğitimcilerimiz, çocukların meraklarını ve öğrenme isteklerini teşvik ederken, güvenli ve destekleyici bir ortam sağlıyoruz. Oyun alanlarımız, müzik ve dans etkinliklerimiz, sanat ve el sanatları derslerimiz, güvenli ulaşım imkanlarımız ve sağlıklı beslenme seçeneklerimizle çocuklarınızın gelişimine katkıda bulunuyoruz. Sınırlı kontenjanlarımız dolmadan yerinizi ayırtın ve çocuğunuzun eğitim yolculuğunda yer alın!
                 </p>
                 <ul class="list-inline m-0">
-                    <li class="py-2">
-                        <i class="fa fa-check text-success mr-3"></i>Labore eos amet
-                        dolor amet diam
+                    <li class="py-2 border-top border-bottom">
+                        <i class="fa fa-check text-primary mr-3"></i>STEM sınıfları ile teknolojiye daha yakın
                     </li>
-                    <li class="py-2">
-                        <i class="fa fa-check text-success mr-3"></i>Etsea et sit dolor
-                        amet ipsum
+                    <li class="py-2 border-bottom">
+                        <i class="fa fa-check text-primary mr-3"></i>Geleneksel eğitim anlayışına yakın
                     </li>
-                    <li class="py-2">
-                        <i class="fa fa-check text-success mr-3"></i>Diam dolor diam
-                        elitripsum vero.
+                    <li class="py-2 border-bottom">
+                        <i class="fa fa-check text-primary mr-3"></i>Robotik kodlama ile geleceği şekillendiren
                     </li>
                 </ul>
                 <a href="" class="btn btn-primary mt-4 py-2 px-4">Book Now</a>
@@ -32,26 +26,32 @@
             <div class="col-lg-5">
                 <div class="card border-0">
                     <div class="card-header bg-secondary text-center p-4">
-                        <h1 class="text-white m-0">Book A Seat</h1>
+                        <h1 class="text-white m-0">Kayıt Yapın..</h1>
                     </div>
                     <div class="card-body rounded-bottom bg-primary p-5">
                         <form>
                             <div class="form-group">
                                 <input type="text"
                                        class="form-control border-0 p-4"
-                                       placeholder="Your Name"
+                                       placeholder="İsminiz"
                                        required="required" />
                             </div>
                             <div class="form-group">
                                 <input type="email"
                                        class="form-control border-0 p-4"
-                                       placeholder="Your Email"
+                                       placeholder="Mail Adresiniz"
+                                       required="required" />
+                            </div>
+                            <div class="form-group">
+                                <input type="text"
+                                       class="form-control border-0 p-4"
+                                       placeholder="Telefon Numaranız"
                                        required="required" />
                             </div>
                             <div class="form-group">
                                 <select class="custom-select border-0 px-4"
                                         style="height: 47px">
-                                    <option selected>Select A Class</option>
+                                    <option selected>Bir sınıf seçin..</option>
                                     <option value="1">Class 1</option>
                                     <option value="2">Class 1</option>
                                     <option value="3">Class 1</option>
@@ -60,7 +60,7 @@
                             <div>
                                 <button class="btn btn-secondary btn-block border-0 py-3"
                                         type="submit">
-                                    Book Now
+                                    Kayıt Yap..
                                 </button>
                             </div>
                         </form>
