--- a/KidKinder/Views/Shared/Components/_SocialPartial/Default.cshtml
+++ b/KidKinder/Views/Shared/Components/_SocialPartial/Default.cshtml
@@ -9,9 +9,7 @@
         <span class="text-white">KidKinder</span>
     </a>
     <p>
-        Labore dolor amet ipsum ea, erat sit ipsum duo eos. Volup amet ea
-        dolor et magna dolor, elitr rebum duo est sed diam elitr. Stet elitr
-        stet diam duo eos rebum ipsum diam ipsum elitr.
+        Biz, çocukların keşfetmeye, öğrenmeye ve büyümeye yönelik meraklarını ve potansiyellerini desteklemeyi amaçlayan bir çocuk anaokulu projesiyiz. Öğrencilerimizin bireysel ihtiyaçlarını anlayarak, eğitimlerini keyifli ve etkili bir şekilde yönlendiriyoruz.
     </p>
     <div class="d-flex justify-content-start mt-4">
         <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0"
