--- a/KidKinder/Views/Shared/Components/_TestimonialPartial/Default.cshtml
+++ b/KidKinder/Views/Shared/Components/_TestimonialPartial/Default.cshtml
@@ -5,9 +5,9 @@
     <div class="container p-0">
         <div class="text-center pb-2">
             <p class="section-title px-5">
-                <span class="px-2">Testimonial</span>
+                <span class="px-2">Yorumlar</span>
             </p>
-            <h1 class="mb-4">What Parents Say!</h1>
+            <h1 class="mb-4">Ebeveyinlerimiz Ne Demiş!</h1>
         </div>
         <div class="owl-carousel testimonial-carousel">
             <div class="testimonial-item px-3">
