--- a/KidKinder/Views/Shared/Components/_NewsletterPartial/Default.cshtml
+++ b/KidKinder/Views/Shared/Components/_NewsletterPartial/Default.cshtml
@@ -1,16 +1,16 @@
 ﻿
 
 <div class="col-lg-3 col-md-6 mb-5">
-    <h3 class="text-primary mb-4">Newsletter</h3>
+    <h3 class="text-primary mb-4">Bültenimiz</h3>
     <form action="">
         <div class="form-group">
-            <input type="text" class="form-control border-0 py-4" placeholder="Your Name" required="required" />
+            <input type="text" class="form-control border-0 py-4" placeholder="İsminiz" required="required" />
         </div>
         <div class="form-group"> 
-            <input type="email" class="form-control border-0 py-4" placeholder="Your Email" required="required" />
+            <input type="email" class="form-control border-0 py-4" placeholder="Mail Adresiniz" required="required" />
         </div>
         <div>
-            <button class="btn btn-primary btn-block border-0 py-3" type="submit">   Submit Now   </button>
+            <button class="btn btn-primary btn-block border-0 py-3" type="submit">  Bültene Kayıt Olun..  </button>
         </div>
     </form>
 </div>
