--- a/KidKinder/Views/Shared/Components/_TeacherPartial/Default.cshtml
+++ b/KidKinder/Views/Shared/Components/_TeacherPartial/Default.cshtml
@@ -3,9 +3,9 @@
     <div class="container">
         <div class="text-center pb-2">
             <p class="section-title px-5">
-                <span class="px-2">Our Teachers</span>
+                <span class="px-2">Öğretmenlerimiz</span>
             </p>
-            <h1 class="mb-4">Meet Our Teachers</h1>
+            <h1 class="mb-4">Öğretmenlerimiz İle Tanışın..</h1>
         </div>
         <div class="row">
             <div class="col-md-6 col-lg-3 text-center team mb-5">
