Feature section completed

--- a/KidKinder/Views/LayoutPartial/AdminLayoutPartial/_SidebarPartial.cshtml
+++ b/KidKinder/Views/LayoutPartial/AdminLayoutPartial/_SidebarPartial.cshtml
@@ -21,15 +21,11 @@
     <div class="sidebar_blog_2">
         <h4>Admin Panel</h4>
         <ul class="list-unstyled components">
-            <li class="active"><a href="widgets.html"><i class="fa fa-dashboard yellow_color"></i>Ana Panel</a></li>
-            <li><a href="widgets.html"><i class="fa fa-clock-o orange_color"></i> <span>Sınıflar</span></a></li>
-            <li><a href="tables.html"><i class="fa fa-user"></i> <span>Öğretmenler</span></a></li>
-            <li><a href="tables.html"><i class="fa fa-group red_color"></i> <span>Öğrenciler</span></a></li>
-            <li>
-                <a href="contact.html">
-                    <i class="fa fa-paper-plane red_color"></i> <span>Mesajlar</span>
-                </a>
-            </li>
+            <li class="active"><a href="/Dashboard/Index"><i class="fa fa-dashboard yellow_color"></i>Ana Panel</a></li>
+            <li><a href="/Classes/Index"><i class="fa fa-clock-o orange_color"></i> <span>Sınıflar</span></a></li>
+            <li><a href="/Teacher/Index"><i class="fa fa-user"></i> <span>Öğretmenler</span></a></li>
+            <li><a href="/Children/Index"><i class="fa fa-group red_color"></i> <span>Öğrenciler</span></a></li>
+            <li> <a href="/Message/Index"> <i class="fa fa-paper-plane green_color"></i> <span>Mesajlar</span></a> </li>
             <li class="active">
                 <a href="#additional_page" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle"><i class="fa fa-clone yellow_color"></i> <span>Kayıtlar</span></a>
                 <ul class="collapse list-unstyled" id="additional_page">
@@ -45,16 +41,16 @@
                 </ul>
             </li>
             <li class="active">
-                <a href="#setting_page" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle"><i class="fa fa-cog yellow_color"></i> <span>Sayfa Ayarları</span></a>
+                <a href="#setting_page" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle"><i class="fa fa-cog purple_color"></i> <span>Sayfa Ayarları</span></a>
                 <ul class="collapse list-unstyled" id="setting_page">
                     <li>
-                        <a href="project.html">> <span>Başlık</span></a>
+                        <a href="/Feature/Index"> <span>Başlık</span></a>
                     </li>
                     <li>
-                        <a href="login.html">> <span>Yorumlar</span></a>
+                        <a href="/Testimonial/Index"> <span>Yorumlar</span></a>
                     </li>
                     <li>
-                        <a href="login.html">> <span>İletişim</span></a>
+                        <a href="/Contact/Index"> <span>İletişim</span></a>
                     </li>
                 </ul>
             </li>
