--- a/KidKinder/Views/Shared/Components/_ClassesPartial/Default.cshtml
+++ b/KidKinder/Views/Shared/Components/_ClassesPartial/Default.cshtml
@@ -1,4 +1,6 @@
 ﻿
+@model List<KidClass>
+
 <div class="container-fluid pt-5">
     <div class="container">
         <div class="text-center pb-2">
@@ -8,123 +10,47 @@
             <h1 class="mb-4">Çocuklarınız için Sınıflar</h1>
         </div>
         <div class="row">
-            <div class="col-lg-4 mb-5">
-                <div class="card border-0 bg-light shadow-sm pb-2">
-                    <img class="card-img-top mb-2" src="~/kidkinder-1.0.0/img/class-1.jpg" alt="" />
-                    <div class="card-body text-center">
-                        <h4 class="card-title">Drawing Class</h4>
-                        <p class="card-text">
-                            Justo ea diam stet diam ipsum no sit, ipsum vero et et diam
-                            ipsum duo et no et, ipsum ipsum erat duo amet clita duo
-                        </p>
+            @foreach(var item in Model)
+            {
+                <div class="col-lg-4 mb-5">
+                    <div class="card border-0 bg-light shadow-sm pb-2">
+                        <img class="card-img-top mb-2" height="250px" width="100px" src="@item.ImageUrl" alt="" />
+                        <div class="card-body text-center">
+                            <h4 class="card-title">@item.Name</h4>
+                            <p class="card-text">
+                                @item.Description
+                            </p>
+                        </div>
+                        <div class="card-footer bg-transparent py-4 px-5">
+                            <div class="row border-bottom">
+                                <div class="col-6 py-1 text-right border-right">
+                                    <strong>Yaş Grubu</strong>
+                                </div>
+                                <div class="col-6 py-1">@item.AgeOfKids Yaş</div>
+                            </div>
+                            <div class="row border-bottom">
+                                <div class="col-6 py-1 text-right border-right">
+                                    <strong>Sınıf Kapasitesi</strong>
+                                </div>
+                                <div class="col-6 py-1">@item.TotalSeats</div>
+                            </div>
+                            <div class="row border-bottom">
+                                <div class="col-6 py-1 text-right border-right">
+                                    <strong>Sınıf Saatleri</strong>
+                                </div>
+                                <div class="col-6 py-1">@item.ClassTime</div>
+                            </div>
+                            <div class="row">
+                                <div class="col-6 py-1 text-right border-right">
+                                    <strong>Eğitim Fiyatı</strong>
+                                </div>
+                                <div class="col-6 py-1">@item.TutionFee ₺ / Aylık</div>
+                            </div>
+                        </div>
+                        <a href="" class="btn btn-primary px-4 mx-auto mb-4">Şimdi Kayıt Yap</a>
                     </div>
-                    <div class="card-footer bg-transparent py-4 px-5">
-                        <div class="row border-bottom">
-                            <div class="col-6 py-1 text-right border-right">
-                                <strong>Age of Kids</strong>
-                            </div>
-                            <div class="col-6 py-1">3 - 6 Years</div>
-                        </div>
-                        <div class="row border-bottom">
-                            <div class="col-6 py-1 text-right border-right">
-                                <strong>Total Seats</strong>
-                            </div>
-                            <div class="col-6 py-1">40 Seats</div>
-                        </div>
-                        <div class="row border-bottom">
-                            <div class="col-6 py-1 text-right border-right">
-                                <strong>Class Time</strong>
-                            </div>
-                            <div class="col-6 py-1">08:00 - 10:00</div>
-                        </div>
-                        <div class="row">
-                            <div class="col-6 py-1 text-right border-right">
-                                <strong>Tution Fee</strong>
-                            </div>
-                            <div class="col-6 py-1">$290 / Month</div>
-                        </div>
-                    </div>
-                    <a href="" class="btn btn-primary px-4 mx-auto mb-4">Join Now</a>
                 </div>
-            </div>
-            <div class="col-lg-4 mb-5">
-                <div class="card border-0 bg-light shadow-sm pb-2">
-                    <img class="card-img-top mb-2" src="~/kidkinder-1.0.0/img/class-2.jpg" alt="" />
-                    <div class="card-body text-center">
-                        <h4 class="card-title">Language Learning</h4>
-                        <p class="card-text">
-                            Justo ea diam stet diam ipsum no sit, ipsum vero et et diam
-                            ipsum duo et no et, ipsum ipsum erat duo amet clita duo
-                        </p>
-                    </div>
-                    <div class="card-footer bg-transparent py-4 px-5">
-                        <div class="row border-bottom">
-                            <div class="col-6 py-1 text-right border-right">
-                                <strong>Age of Kids</strong>
-                            </div>
-                            <div class="col-6 py-1">3 - 6 Years</div>
-                        </div>
-                        <div class="row border-bottom">
-                            <div class="col-6 py-1 text-right border-right">
-                                <strong>Total Seats</strong>
-                            </div>
-                            <div class="col-6 py-1">40 Seats</div>
-                        </div>
-                        <div class="row border-bottom">
-                            <div class="col-6 py-1 text-right border-right">
-                                <strong>Class Time</strong>
-                            </div>
-                            <div class="col-6 py-1">08:00 - 10:00</div>
-                        </div>
-                        <div class="row">
-                            <div class="col-6 py-1 text-right border-right">
-                                <strong>Tution Fee</strong>
-                            </div>
-                            <div class="col-6 py-1">$290 / Month</div>
-                        </div>
-                    </div>
-                    <a href="" class="btn btn-primary px-4 mx-auto mb-4">Join Now</a>
-                </div>
-            </div>
-            <div class="col-lg-4 mb-5">
-                <div class="card border-0 bg-light shadow-sm pb-2">
-                    <img class="card-img-top mb-2" src="~/kidkinder-1.0.0/img/class-3.jpg" alt="" />
-                    <div class="card-body text-center">
-                        <h4 class="card-title">Basic Science</h4>
-                        <p class="card-text">
-                            Justo ea diam stet diam ipsum no sit, ipsum vero et et diam
-                            ipsum duo et no et, ipsum ipsum erat duo amet clita duo
-                        </p>
-                    </div>
-                    <div class="card-footer bg-transparent py-4 px-5">
-                        <div class="row border-bottom">
-                            <div class="col-6 py-1 text-right border-right">
-                                <strong>Age of Kids</strong>
-                            </div>
-                            <div class="col-6 py-1">3 - 6 Years</div>
-                        </div>
-                        <div class="row border-bottom">
-                            <div class="col-6 py-1 text-right border-right">
-                                <strong>Total Seats</strong>
-                            </div>
-                            <div class="col-6 py-1">40 Seats</div>
-                        </div>
-                        <div class="row border-bottom">
-                            <div class="col-6 py-1 text-right border-right">
-                                <strong>Class Time</strong>
-                            </div>
-                            <div class="col-6 py-1">08:00 - 10:00</div>
-                        </div>
-                        <div class="row">
-                            <div class="col-6 py-1 text-right border-right">
-                                <strong>Tution Fee</strong>
-                            </div>
-                            <div class="col-6 py-1">$290 / Month</div>
-                        </div>
-                    </div>
-                    <a href="" class="btn btn-primary px-4 mx-auto mb-4">Join Now</a>
-                </div>
-            </div>
+            }
         </div>
     </div>
 </div>
