class creating is completed

--- a/KidKinder/Views/Class/Index.cshtml
+++ b/KidKinder/Views/Class/Index.cshtml
@@ -49,13 +49,14 @@
                                             <td>@item.TotalSeats</td>
                                             <td>@item.ClassTime</td>
                                             <td>@item.TutionFee</td>
-                                            <td><a href="/Feature/DeleteFeature/@item.KidClassID" class="btn btn-danger">Sil</a></td>
-                                            <td><a href="/Feature/UpdateFeature/@item.KidClassID" class="btn btn-warning">Güncelle</a></td>
+                                            <td><a href="/Class/DeleteClass/@item.KidClassID" class="btn btn-danger">Sil</a></td>
+                                            <td><a href="/Class/UpdateClass/@item.KidClassID" class="btn btn-warning">Güncelle</a></td>
                                         </tr>
                                     }
                                 </tbody>
                             </table>
                         </div>
+                        <a href="/Class/CreateClass" class="btn btn-primary">Sınıf Oluştur</a>
                     </div>
                 </div>
             </div>
