--- a/KidKinder/Views/LayoutPartial/AdminLayoutPartial/_SidebarPartial.cshtml
+++ b/KidKinder/Views/LayoutPartial/AdminLayoutPartial/_SidebarPartial.cshtml
@@ -21,8 +21,10 @@
     <div class="sidebar_blog_2">
         <h4>Admin Panel</h4>
         <ul class="list-unstyled components">
+
+            <li><a href="/Default/Index"><i class="fa fa-file-text"></i> <span>Siteye Git</span></a></li>
             <li class="active"><a href="/Dashboard/Index"><i class="fa fa-dashboard yellow_color"></i>Ana Panel</a></li>
-            <li><a href="/Classes/Index"><i class="fa fa-clock-o orange_color"></i> <span>Sınıflar</span></a></li>
+            <li><a href="/Class/Index"><i class="fa fa-clock-o orange_color"></i> <span>Sınıflar</span></a></li>
             <li><a href="/Teacher/Index"><i class="fa fa-user"></i> <span>Öğretmenler</span></a></li>
             <li><a href="/Children/Index"><i class="fa fa-group red_color"></i> <span>Öğrenciler</span></a></li>
             <li> <a href="/Message/Index"> <i class="fa fa-paper-plane green_color"></i> <span>Mesajlar</span></a> </li>
