Dashboard created and started to design

--- a/KidKinder/Views/LayoutPartial/AdminLayoutPartial/_SidebarPartial.cshtml
+++ b/KidKinder/Views/LayoutPartial/AdminLayoutPartial/_SidebarPartial.cshtml
@@ -22,7 +22,7 @@
         <h4>Admin Panel</h4>
         <ul class="list-unstyled components">
 
-            <li><a href="/Default/Index"><i class="fa fa-file-text"></i> <span>Siteye Git</span></a></li>
+            <li><a href="/Default/Index" target="_blank"><i class="fa fa-file-text"></i> <span>Siteye Git</span></a></li>
             <li class="active"><a href="/Dashboard/Index"><i class="fa fa-dashboard yellow_color"></i>Ana Panel</a></li>
             <li><a href="/Class/Index"><i class="fa fa-clock-o orange_color"></i> <span>Sınıflar</span></a></li>
             <li><a href="/Teacher/Index"><i class="fa fa-user"></i> <span>Öğretmenler</span></a></li>
